--- a/stylea.css
+++ b/stylea.css
@@ -1,9 +1,9 @@
 body{
 		background:url(back1.jpg); 
-		background-position:top;
+		background-position:left;
 		
 		overflow-x:hidden;
-		bottom:600px;
+		
 		
 		
 		
