--- a/style2.css
+++ b/style2.css
@@ -265,6 +265,16 @@ font-family: 'Amatic SC', cursive;
 	margin-left:1450px;
 	margin-bottom:-250px;
 }
+.b29{	
+	margin-top:102px;
+	margin-left:1550px;
+	margin-bottom:-250px;
+}
+.b30{	
+	margin-top:102px;
+	margin-left:1650px;
+	margin-bottom:-250px;
+}
 
 .cl{
 	color:white;
