--- a/style2.css
+++ b/style2.css
@@ -157,12 +157,32 @@ font-family: 'Amatic SC', cursive;
 
 }
 .d13{	
-	margin-top:-19px;
+	margin-top:-18px;
 	margin-left:1230px;
 
 }
 .d14{	
-	margin-top:-19px;
+	margin-top:-18px;
+	margin-left:1330px;
+
+}
+.d15{	
+	margin-top:-18px;
+	margin-left:1330px;
+
+}
+.d16{	
+	margin-top:-18px;
+	margin-left:1330px;
+
+}
+.d17{	
+	margin-top:-18px;
+	margin-left:1330px;
+
+}
+.d18{	
+	margin-top:-18px;
 	margin-left:1330px;
 
 }
