--- a/style2.css
+++ b/style2.css
@@ -1,7 +1,7 @@
 body{
-		background:url(back.jpg); 
+		background:url(back4.jpg); 
 		background-position:top;
-		background-repeat: repeat-x;
+		
 		overflow-x:hidden;
 		bottom:600px;
 		
