--- a/style2.css
+++ b/style2.css
@@ -316,6 +316,10 @@ font-family: 'Amatic SC', cursive;
 	margin-left:660px
 }
 .g5{
-	margin-top:-126px;
+	margin-top:-128px;
 	margin-left:920px
+}
+.g6{
+	margin-top:-128px;
+	margin-left:1120px
 }
