--- a/style2.css
+++ b/style2.css
@@ -21,7 +21,7 @@ div#memory_board{
 		padding:20px;
 }
 div#memory_board  >  div{
-	background:url(bird.jpg) no-repeat;
+	background:url(bird2.jpg) no-repeat;
 	width:60px;
 	height:45px;
 	float:left;
